change contact info

--- a/_config.yml
+++ b/_config.yml
@@ -30,7 +30,7 @@ twitter:
   username: twitter_username            # change to your twitter username
 
 social:
-  name: JasperBear                  # it will shows as the copyright owner in Footer
+  name: CoffeeBear                  # it will shows as the copyright owner in Footer
   email: jasper.fang@qq.com             # change to your email address
   links:
     # The first element serves as the copyright owner's link
