--- a/_data/contact.yml
+++ b/_data/contact.yml
@@ -32,3 +32,15 @@
   type: stack-overflow
   icon: 'fab fa-stack-overflow'
   url:  'https://stackoverflow.com/users/14596745/siyu-fang'                  # Fill with your stackoverflow homepage
+-
+  type: ZhiHu
+  icon: 'fab fa-zhihu'
+  url:  'https://www.zhihu.com/people/fang-si-yu-84'
+-
+  type: CSDN
+  icon: 'fab fa-csdn'
+  url:  'https://blog.csdn.net/i493052739'
+-
+  type: LeetCode
+  icon: 'fab fa-leetcode'
+  url:  'https://leetcode-cn.com/u/jasperfang/'
