feed zhihu csdn leetcode info in contact.yml, share.yml

--- a/_data/contact.yml
+++ b/_data/contact.yml
@@ -38,7 +38,7 @@
   url:  'https://www.zhihu.com/people/fang-si-yu-84'
 -
   type: CSDN
-  icon: 'fab fa-csdn'
+  icon: 'fab fa-rss'
   url:  'https://blog.csdn.net/i493052739'
 -
   type: LeetCode
